# numerical-methods

./: .gitignore  README.md
laboratory-work-1/: CMakeLists.txt
laboratory-work-1/app/: mainwindow.cpp  mainwindow.h  mainwindow.ui
laboratory-work-1/include/: MainWork1.h  MainWork2.h  TestWork.h
laboratory-work-1/src/: CMakeLists.txt  MainWork1.cpp  MainWork2.cpp  TestWork.cpp
laboratory-work-2/: CMakeLists.txt
laboratory-work-2/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
laboratory-work-2/include/: functions.h  solver.h  tridiagonal_matrix_algorithm.h
laboratory-work-2/sample/: main.cpp
laboratory-work-2/src/: CMakeLists.txt  functions.cpp  solver.cpp  tridiagonal_matrix_algorithm.cpp
laboratory-work-3/: CMakeLists.txt
laboratory-work-3/app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
laboratory-work-3/include/: functions.h  problems.h  solver.h  spline.h
laboratory-work-3/sample/: CMakeLists.txt  main.cpp
laboratory-work-3/src/: functions.cpp  solver.cpp  spline.cpp  tridiagonal_matrix_algorithm.cpp
laboratory-work-4/C#/: Graph3D.chm
laboratory-work-4/C#/Graph3D/: App.config  ColorSchema.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form2.resx  Form4.Designer.cs  Form4.cs  FunctionCompiler.cs  Graph3D.cs  Graph3D.csproj  Graph3DMainForm.Designer.cs  Program.cs  (+4 more)
laboratory-work-4/C++/: CMakeLists.txt
non-stationary-heat-equation/: main.py  mainwindow.ui  mplwidget.py  mymplwindow.py  non_stationary_heat_equation.py  nshe_solver.py  tridiagonal_matrix_algorithm.py  ui_mainwindow.py
(+13 files in other folders)
